--- a/kernel.ipynb
+++ b/kernel.ipynb
@@ -86,6 +86,7 @@
     "                    # it is a file\n",
     "                    print(\"dans sandbox\")\n",
     "                    print(\"toto\")\n",
+    "                    print(\"manu au goulag\")\n",
     "                    print(os.path.join(gesture_directory, frame_filename))\n",
     "              #  tree = ElementTree.parse(os.path.join(gesture_directory, frame_filename))\n",
     "               # root = tree.getroot()\n",
