implementation of a xml parser (begining)

--- a/kernel.ipynb
+++ b/kernel.ipynb
@@ -138,7 +138,7 @@
     "data_img[\"subject\"] = data_img[\"img_path\"].apply(extract_from_path, args=(5,))\n",
     "data_img[\"serie\"] = data_img[\"img_path\"].apply(extract_from_path, args=(6,))\n",
     "data_img[\"gesture\"] = data_img[\"img_path\"].apply(extract_from_path, args=(7,))\n",
-    "data_img[\"fname\"] = data_img[\"img_path\"].apply(extract_from_path, args=(-1,))\n",
+    "data_img[\"frame\"] = data_img[\"img_path\"].apply(extract_from_path, args=(-1,))\n",
     "\n",
     "print(data_img.head(5), \"dataset len: \", data_img.shape[0])"
    ]
@@ -179,7 +179,7 @@
     "data_xml[\"subject\"] = data_xml[\"xml_path\"].apply(extract_from_path, args=(5,))\n",
     "data_xml[\"serie\"] = data_xml[\"xml_path\"].apply(extract_from_path, args=(6,))\n",
     "data_xml[\"gesture\"] = data_xml[\"xml_path\"].apply(extract_from_path, args=(7,))\n",
-    "data_xml[\"fname\"] = data_xml[\"xml_path\"].apply(extract_from_path, args=(-1,))\n",
+    "data_xml[\"frame\"] = data_xml[\"xml_path\"].apply(extract_from_path, args=(-1,))\n",
     "\n",
     "print(data_xml.head(5), \"dataset len: \", data_xml.shape[0])"
    ]
@@ -220,14 +220,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Element opencv_storage at 0x7f9fcab954c8>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\ndef xml_extractor(path,tag): \\n    tree = etree.parse(path)\\n'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from lxml import etree\n",
     "\n",
-    "    "
+    "tree = etree.parse(\"../input/multimodhandgestrec/MultiModHandGestRec/skeletal/13/test_gesture/16_five/05/frame_99816.xml\")\n",
+    "\n",
+    "for i in tree.xpath(\"/opencv_storage\"):\n",
+    "    print(i)\n",
+    "'''\n",
+    "def xml_extractor(path,tag): \n",
+    "    tree = etree.parse(path)\n",
+    "'''  "
    ]
   },
   {
